--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-index.html
+<!DOCTYPE html>
+
+    <head>
+     <meta charset="utf-8">
+     <title></title>
+     <meta name="description" content="">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+		 <link rel="stylesheet" type="text/css" href="style.css">
+        
+    </head>
+    <body>
+    	<h2 id="big">Snake Game</h2>
+    	<div id="container">
+    		<div id="message"></div>
+    		<div id="score"></div>
+    		<div id="board"></div>
+    	</div>
+
+      <script type="text/javascript" src="jquery.js"></script>
+      <script type="text/javascript" src="main.js"></script>
+    </body>
+</html>
